Actualizar texto de características y traducciones en el componente FeatureNumbers

--- a/src/components/Feature/FeatureNumbers.astro
+++ b/src/components/Feature/FeatureNumbers.astro
@@ -20,16 +20,16 @@ const featureData: FeatureCardData[] = [
     description: `Años Juntos`,
   },
   {
-    largeText: "20K",
+    largeText: "20mil",
     description: `Fotos Tomadas`,
   },
   {
-    largeText: "310",
-    description: `Events Captured`,
+    largeText: "310Mil",
+    description: `Momentos Capturados`,
   },
   {
     largeText: "22",
-    description: `Locations`,
+    description: `Destinos`,
   },
 ];
 ---
