Actualizar formato de texto en los números de características

--- a/src/components/Feature/FeatureNumbers.astro
+++ b/src/components/Feature/FeatureNumbers.astro
@@ -20,12 +20,12 @@ const featureData: FeatureCardData[] = [
     description: `Años Juntos`,
   },
   {
-    largeText: "20mil",
-    description: `Fotos Tomadas`,
+    largeText: "20M",
+    description: `Fotos`,
   },
   {
-    largeText: "310Mil",
-    description: `Momentos Capturados`,
+    largeText: "310M",
+    description: `Momentos`,
   },
   {
     largeText: "22",
