--- a/src/components/PortfolioCard/PortfolioCard.astro
+++ b/src/components/PortfolioCard/PortfolioCard.astro
@@ -63,7 +63,7 @@ const { title, description, heroImage } = portfolio.data;
         href={`/portfolio/${portfolio.id}`}
         class="pl-0"
       >
-        Ver mas
+        Ver más
       </Button>
     </div>
   </div>
