Actualizar textos en el componente About y modificar el enlace de Portfolio a Galería en el Footer

--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -14,17 +14,12 @@ import profileImage2 from "@assets/images/Cristian.jpg";
   <div class="flex flex-col md:flex-row">
     <div class="md:w-2/3">
       <h2 class="h3 text-pretty uppercase text-primary-500">
-        Conoce a la Novia
+        La Novia
       </h2>
       <h3 class="h2 mt-4">Nuria</h3>
       <div class="mt-8 bg-base-100 p-8 md:mb-20 lg:text-lg">
         <p>
-          I specialize in capturing the unique beauty and joy of your special
-          day. With a passion for storytelling and a keen eye for detail, I
-          strive to create timeless images that reflect your love and
-          personality. Whether it's a beachfront ceremony, a vineyard reception,
-          or a city hall elopement, I am dedicated to providing you with
-          exceptional photography.
+          Queremos compartir con cada uno de vosotros un día muy especial para nosotros, una de las decisiones más importantes de nuestra vida. Nos vamos a sentir afortunados de estar rodeados de nuestros seres queridos y amigos, con quienes hemos tenido la oportunidad de compartir momentos inolvidables. Esperamos que nos acompañeis y paseis un día memorable.
         </p>
         <div class="flex w-3/4 justify-end">
           <p class="font-heading-1 text-3xl italic">- Nuria</p>
@@ -49,17 +44,12 @@ import profileImage2 from "@assets/images/Cristian.jpg";
   <div class="flex flex-col md:flex-row">
     <div class="md:w-2/3">
       <h2 class="h3 text-pretty uppercase text-primary-500">
-        Conoce al Novio
+        El Novio
       </h2>
       <h3 class="h2 mt-4">Cristian</h3>
       <div class="mt-8 bg-base-100 p-8 md:mb-20 lg:text-lg">
         <p>
-          I specialize in capturing the unique beauty and joy of your special
-          day. With a passion for storytelling and a keen eye for detail, I
-          strive to create timeless images that reflect your love and
-          personality. Whether it's a beachfront ceremony, a vineyard reception,
-          or a city hall elopement, I am dedicated to providing you with
-          exceptional photography.
+          Cada minuto es importante y especial, como todos los que ya hemos vivido, este no va a ser diferente. Pensamos en ti y en cómo formas parte de nuestra historia. Por eso, espero que nos puedas acompañar en un día muy especial para nosotros y tener, una vez más, la oportunidad de pasar un momento de infinita felicidad ante una decisión tan importante. ¡Te esperamos!
         </p>
         <div class="flex w-3/4 justify-end">
           <p class="font-heading-1 text-3xl italic">- Cristian</p>
