--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -24,13 +24,12 @@ const today = new Date();
       </div>
       <div class="col-span-2 flex justify-end gap-4">
         <FooterLink href="/">Home</FooterLink>
-        <FooterLink href="/#portfolio">Portfolio</FooterLink>
+        <FooterLink href="/#portfolio">Galería</FooterLink>
       </div>
       <div class="hidden justify-center text-center md:flex">
         <SiteLogo />
       </div>
       <div class="flex gap-4 md:col-span-2">
-        <FooterLink href="/#pricing">Pricing</FooterLink>
         <FooterLink href="/#contact">Contacto</FooterLink>
       </div>
     </div>
