Actualizar el título en el componente Message de "Mensaje de los comandantes" a "Mensaje de los Pilotos"

--- a/src/components/Message.astro
+++ b/src/components/Message.astro
@@ -15,7 +15,7 @@ import novia    from '@images/novia.jpg';
     <div
         class="max-w-[1140px] phone:w-full phone:px-2 mx-auto mb-12 mt-12 desktop:mb-14 desktop:mt-24 text-color01 flex gap-3 justify-center items-center flex-col"
     >
-        <Title title="Mensaje de los comandantes" />
+        <Title title="Mensaje de los Pilotos" />
         <span
             class="font-rubik desktop:text-xl text-center font-extralight text-gray-400"
         >
