Agregar el componente Party en la página de invitación a trip

--- a/src/pages/invitaciontrip.astro
+++ b/src/pages/invitaciontrip.astro
@@ -11,9 +11,11 @@ import Testimonials from "@components/Testimonials/Testimonials.astro";
 import PrincipalDate from "../components/PrincipalDate.astro";
 import Message from "@components/Message.astro";
 import Itinerario from "@components/Itinerario.astro";
+import Party from "@components/Party.astro";
 
 // data
 import siteData from "@config/siteData.json";
+import Party from "@components/Party.astro";
 ---
 
 <BaseLayout
@@ -27,5 +29,6 @@ import siteData from "@config/siteData.json";
     <PrincipalDate />
     <Message />
     <Itinerario />
+    <Party />
     <Contact />
 </BaseLayout>
