Reemplazar la imagen de flecha por un botón de continuación en el componente Hero

--- a/src/components/Hero/Heroinvtrip.astro
+++ b/src/components/Hero/Heroinvtrip.astro
@@ -56,7 +56,14 @@ import arrowdown from "@images/arrow_down.gif";
         A NUESTRA BODA
       </p>
       <div class="mt-10 flex flex-wrap justify-center gap-4">
-        <img src={arrowdown.src} class="w-14 desktop:w-20" alt="" />
+        <Button
+        variant="ghost"
+        arrow="right"
+        href="#contact"
+        class="pl-0 text-xl text-white drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl"
+      >
+        Continuar
+      </Button>
       </div>
     </div>
   </div>
