Eliminar código comentado relacionado con la redirección en el formulario de contacto

--- a/src/components/Forms/ContactForm.astro
+++ b/src/components/Forms/ContactForm.astro
@@ -1,10 +1,10 @@
 ---
 
 import { actions } from "astro:actions";
-const result = Astro.getActionsResult(actions.send);
-if (result?.data) {
-  return Astro.redirect("/");
-}
+//const result = Astro.getActionsResult(actions.send);
+//if (result?.data) {
+//  return Astro.redirect("/");
+//}
 // components
 import Button from "@components/Button/Button.astro";
 ---
