Agregar ID al componente Countdown y actualizar enlace en Hero para redirigir al contador

--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -6,6 +6,7 @@ const TIMESTAMP_END = 1749402000;
 ---
 
 <section
+    id="countdown"
     class="w-full desktop:px-16 pt-20 pb-10 text-center mx-auto flex flex-col items-center justify-center background-[#F5F5F5]"
 >
         <Title title="Cuánto falta para la boda"/>
